Added sizes to product model and size selector box to product template

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page-header %}
+{% block page_header %}
     <div class="container header-container">
         <div class="row">
             <div class="col"></div>
@@ -42,6 +42,7 @@
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
                                     <td class="py-3">
